--- a/client/src/components/shared/Main.css
+++ b/client/src/components/shared/Main.css
@@ -47,11 +47,10 @@
 .main-nav {
   display:-webkit-flex;
   display: flex;
-  justify-content: flex-end;
   flex-direction: row;
-  align-items: center;
-  position: relative;
-  margin: 0 auto;
+  align-items: center; 
+  /* position: relative;
+  margin: 0 auto; */
   padding: 2em;
   width: 100vw;
   height: 5em;
@@ -60,18 +59,26 @@
   -webkit-box-shadow: 0 0 3px #ccc;
   box-shadow: 0 0 3px #ccc;
   font-size: 1.2em;
+  flex-wrap: wrap;
   
 } 
 
-/* .right-nav {
-  justify-content: flex-end;
+.nav_column {
+  display: flex;
+  flex-direction: column;
+  /* flex-basis: 100%; */
+  /* flex: 1; */
 }
 
-.left-nav {
-  justify-content: right;
-} */
+.right_column {
+
+  
+}
+
+.left_column {
+
+}
 
 .nav-item {
   padding: 2em;
-  margin: 0% 0% 0% 1%;
 }
