more updates to stats

--- a/client/src/components/shared/Main.css
+++ b/client/src/components/shared/Main.css
@@ -102,7 +102,7 @@
 }
 
 .container {
-  height: 50vh;
+  height: 80vh;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
@@ -119,7 +119,7 @@
   font-size: 2rem;
   color:white;
   margin: 1rem;
-  
+}
 
 /* --------------- NAV ---------------- */
 
