--- a/client/src/components/shared/Main.css
+++ b/client/src/components/shared/Main.css
@@ -101,10 +101,11 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   grid-gap: 0.5px;
+  font-size: x-large;
 }
 .cell {
   color: white;
-  font-size: 1.5rem;
+  font-size: large;
   text-align: center;
   padding: 1rem;
 }
