--- a/client/src/components/shared/Main.css
+++ b/client/src/components/shared/Main.css
@@ -112,7 +112,7 @@
   text-align: center;
   font-size: 2rem;
   color:white;
-  margin: 1rem;
+  padding-top: 2rem;
 }
 
 /* --------------- NAV ---------------- */
