--- a/client/src/components/shared/Proven-souls.css
+++ b/client/src/components/shared/Proven-souls.css
@@ -1,10 +1,10 @@
 .ps-container {
   width: 65%;
-  border: 1px red solid;
+  /* border: 1px red solid; */
   margin-left: 1.75em;
 }
 
-.button {
+.proven-button {
   
   cursor: pointer;
   background: #3C7473;
