--- a/client/src/components/shared/About.css
+++ b/client/src/components/shared/About.css
@@ -1,83 +1,75 @@
-.title {
-  /* display: flex; */
-  /* justify-content: ; */
-  font-size: 27px;
-  padding: 1em;
-}
+
 
 .main {
   display: flex;
-  /* padding: 3em; */
   height: 30em;
-  
+ 
 }
 
-.logo {
+.about-logo {
   background-image: url(../../assets/Images/LogoSymbol.png);
-  /* background-position: center; */
   background-size: cover;
-  /* justify-content: flex-start; */
-  /* background-size: 40% */
   height: 100%;
   width: 50%;
-  /* padding: 13em; */
+  align-content: left;
+ 
 }
-.container {
+
+
+.about-container {
   display: flex;
-  /* flex-direction: row; */
-  /* flex-flow: column wrap; */
-  /* align-content:  */
+  
 }
 
 .learn {
   width: 90%; 
-  /* height: 10%; */
+  
+}
+
+.about-title {
+  font-size: 27px;
+  padding: 1em;
 }
 
 .mission {
   font-size: 16px;
-  /* text-indent: em; */
-  /* text-decoration: ; */
-  /* align-content: space-around; */
-  /* flex-direction: column; */
-  /* font-size: 20px; */
-  /* flex-flow: column wrap; */
-  /* align-items: flex-start; */
-  /* padding: 2em; */
-  /* flex-grow: 1; */
+  
 }
 
 .mission-paragraph {
-  /* flex: 2; */
-  /* font-size: 17px; */
-  /* align-content: space-around; */
-  /* flex-direction: column; */
-  /* flex-flow: wrap */
-  /* align-items: flex-end; */
-  /* flex-flow: column wrap; */
-  /* align-self: auto; */
-  /* padding: 5em; */
+  
 }
 
 .bottom {
   display: flex;
-  /* padding: 3em; */
-  /* flex-direction: column; */
-  /* justify-content: center; */
-  /* height: 100%; */
-  /* align-content: flex-end; */
+  border: solid blue 1em;
+  /* justify-content: space-evenly; */
+}
+
+.convert-container {
+  display: flex;  
+  flex-direction: column;
+  border: solid pink 1em;
 }
 
 .converted {
-  /* align-content: space-around; */
-  /* flex-grow: 1; */
-  font-size: 20px;
-  /* padding: 2em; */
-
+  font-size: 1.5em;
+  border: solid orange 1em;
+  
 }
 
 .converted-paragraph {
-  /* align-content: flex-end; */
+  border: solid red 1em;
   font-size: 17px;
-  /* padding: 5em; */
+  
+}
+
+.about-pic1 {
+  display: flex;
+  background-image: url('../../assets/carousel-pic.jpg');
+  background-position: right;
+  background-size: cover;
+  width: 30vw;
+  height: 10vw;
+  padding: 0em 1em;
 }
