--- a/client/src/components/shared/ThreeStages.css
+++ b/client/src/components/shared/ThreeStages.css
@@ -1,8 +1,56 @@
-.ts-top-container {
-  /* border: 2px red solid; */
-  width: 100%;
+/* .ts-top-container {
+  width: 100vw;
+  height: 100vh;
   padding: 0 2em;
   color: white;
+  border: solid 5px red;
+  filter: grayscale(100%);
+}
+.ts-top-container::before {
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  padding: 0 2em;
+  color: white;
+  background: url('../../assets/Images/city-buildings.jpg');
+  background-position: center;
+  background-size: cover;
+  border: solid 5px red;
+  filter: grayscale(100%);
+} */
+
+.ts-top-container {
+  height: 100%;
+  padding: 0;
+}
+.ts-top-bg {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
+  color: white;
+  position: relative;
+}
+.ts-top-bg::before {
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: url('../../assets/Images/city-buildings.jpg');
+  background-size: cover;
+  filter: grayscale(100%);
+}
+
+
+.ts-content-wrapper {
+  width: 100%;
+  /* height: 50%; */
+  position: relative;
 }
 
 .ts-heading {
@@ -35,6 +83,7 @@
 .content h3 {
   font-size: 2.5em;
 }
+
 .content h4 {
   font-size: 1.5em;
 }
@@ -45,46 +94,48 @@
   margin-bottom: 2em;
 }
 
-  .title {
-    font-weight: bold;
-    margin-bottom: 6px;
-    font-size: 22px;
-    color: #4a4a4a;
-  }
+.title {
+  font-weight: bold;
+  margin-bottom: 6px;
+  font-size: 22px;
+  color: #4a4a4a;
+}
 
-  .subtitle {
-    font-weight: lighter;
-    font-size: 16px;
-  }
+.subtitle {
+  font-weight: lighter;
+  font-size: 16px;
+}
 
-  .ts-background-image {
-    background-image: url('../../assets/carousel-pic3.jpg');
-    background-position: center;
-    background-size: cover;
-  }
+.ts-background-image {
+  background-image: url('../../assets/carousel-pic3.jpg');
+  background-position: center;
+  background-size: cover;
+}
 
-  .ts-color-opacity {
-    background-color: rgba(46, 89, 88, 0.6);
-  }
-  .ts-background-image2 {
-    background-image: url('../../assets/carousel-pic1.jpg');
-    background-position: center;
-    background-size: cover;
-  }
+.ts-color-opacity {
+  background-color: rgba(46, 89, 88, 0.6);
+}
 
-  .ts-color-opacity2 {
-    background-color: rgba(162, 90, 81, 0.6);
-  }
-  .ts-background-image3 {
-    background-image: url('../../assets/carousel-pic4.jpg');
-    background-position: center;
-    background-size: cover;
-  }
+.ts-background-image2 {
+  background-image: url('../../assets/carousel-pic1.jpg');
+  background-position: center;
+  background-size: cover;
+}
 
-  .ts-color-opacity3 {
-    background-color: rgba(122, 85, 116, 0.6);
-  }
-  
+.ts-color-opacity2 {
+  background-color: rgba(162, 90, 81, 0.6);
+}
+
+.ts-background-image3 {
+  background-image: url('../../assets/carousel-pic4.jpg');
+  background-position: center;
+  background-size: cover;
+}
+
+.ts-color-opacity3 {
+  background-color: rgba(122, 85, 116, 0.6);
+}
+
 
 .ts-long-box {
   display: flex;
@@ -111,28 +162,28 @@
 }
 
 
-  .ts-button {
-  
-    cursor: pointer;
-    background: #D5C54A;
-    font-size: 1em;
-    border-radius: 3px;
-    align-content: center;
-    color: white;
-    font-size: 1.75em;
-    border: 2px solid white;
-    /* border: 2px solid white; */
-    margin: 0 auto;
-   margin-top: 1em;
-    /* padding: 0.5em 1em; */
-    width: 20rem;
-    transition: 0.5s all ease-out;
-    padding: 1em 2em;
-    margin-left: 0 auto;
-    margin-bottom: 1em;
-  }
+.ts-button {
 
-  .ts-button:hover {
-    background: white;
-    color: black;
-  }
+  cursor: pointer;
+  background: #D5C54A;
+  font-size: 1em;
+  border-radius: 3px;
+  align-content: center;
+  color: white;
+  font-size: 1.75em;
+  border: 2px solid white;
+  /* border: 2px solid white; */
+  margin: 0 auto;
+  margin-top: 1em;
+  /* padding: 0.5em 1em; */
+  width: 20rem;
+  transition: 0.5s all ease-out;
+  padding: 1em 2em;
+  margin-left: 0 auto;
+  margin-bottom: 1em;
+}
+
+.ts-button:hover {
+  background: white;
+  color: black;
+}
