--- a/client/src/components/shared/Stats.css
+++ b/client/src/components/shared/Stats.css
@@ -7,16 +7,19 @@
   height: 100%;
   width: 100%;
   opacity: 0.75;
+  font-size: xx-large;
+  
   
 }
 
 .stats-container {
-  height: 80vh;
+  height: 60vh;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
-  grid-gap: 0.5px;
-  font-size: x-large;
+ 
+  margin-left: 10em;
+  margin-right: 10em;
 }
 .cell {
   color: white;
