styled proven-souls section

--- a/client/src/components/shared/Proven-souls.css
+++ b/client/src/components/shared/Proven-souls.css
@@ -1,8 +1,34 @@
+@import url('https://fonts.googleapis.com/css?family=Oxygen|Raleway&display=swap');
+@font-face {
+  src: url('https://fonts.googleapis.com/css?family=Oxygen|Raleway&display=swap');
+  /* TITle */
+  font-family: 'Oxygen', sans-serif;
+  /* Text */
+  font-family: 'Raleway', sans-serif;
+}
+
+
 .ps-container {
   width: 65%;
+  margin: 4em 5em;
+  margin-left: 6em;
+  font-weight: none;
   /* border: 1px red solid; */
-  margin-left: 1.75em;
 }
+
+.ps-title {
+  font-family: 'Oxygen', sans-serif;
+  font-weight: bold;
+  font-size: 4.5em;
+  margin-bottom: 1em;
+}
+.ps-para {
+  
+  font-family: 'Raleway', sans-serif;
+  line-height: 2em;
+  font-size: 1.25em;
+  margin-bottom: .50em;
+  }
 
 .proven-button {
   
@@ -20,7 +46,7 @@
   /* padding: 0.5em 1em; */
   width: 20rem;
   transition: 0.5s all ease-out;
-  padding: 1em 2em;
+  padding: .75em 1.25em;
   margin-left: 0 auto;
   margin-bottom: 1em;
 }
