changes made to styles

--- a/client/src/components/shared/Main.css
+++ b/client/src/components/shared/Main.css
@@ -9,12 +9,12 @@
 
 /* --------------- Fonts ---------------- */
 
-@import url('https://fonts.googleapis.com/css?family=Hepta+Slab&display=swap');
+/* @import url('https://fonts.googleapis.com/css?family=Hepta+Slab&display=swap');
 
 h1 {
   font-family: 'Hepta Slab', serif;
   color: blue;
-}
+} */
 /* --------------- Colors ---------------- */
 /* #FFFFFF #724524 #7344 */
 
