--- a/client/src/components/shared/About.css
+++ b/client/src/components/shared/About.css
@@ -59,11 +59,25 @@
   /* border: solid red 1em; */
 }
 
-.about-wrapper {
+.about-carousel {
   width: 50%;
   padding: 1em;
+  border: 1px solid #ddd;
+  border-radius: 4px;
   /* border: blue 2px solid; */
 }
+.carousel-animation {
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+
+.position {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 80px;
+}
+
 .about-pic1 {
   background-position: center;
   background-size: cover;
