--- a/client/src/components/admin/AdminHome.css
+++ b/client/src/components/admin/AdminHome.css
@@ -1,4 +1,6 @@
 /* FONT */
+@import url('https://fonts.googleapis.com/css?family=Oxygen|Raleway&display=swap');
+
 @font-face {
   src: url('https://fonts.googleapis.com/css?family=Oxygen|Raleway&display=swap');
   /* TITle */
@@ -10,7 +12,6 @@
 .admincontainer {
   padding: 0em;
   height: 100vh;
-  border: 2px solid red;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -24,11 +25,11 @@
   text-align: center;
 }
 
-.button-col, .button-col-one {
+.button-col,
+.button-col-one {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border: solid 5px blue;
   height: 50vh;
   flex: 50%;
 
@@ -44,9 +45,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  border: solid 1px green;
   flex-wrap: wrap;
-  
+
 }
 
 button {
@@ -55,4 +55,3 @@ button {
   color: white;
   width: 10em;
 }
-
