--- a/client/src/components/shared/About.css
+++ b/client/src/components/shared/About.css
@@ -66,11 +66,16 @@
   border-radius: 4px;
   /* border: blue 2px solid; */
 }
-.carousel-animation {
-  -webkit-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
+.carousel-animation: {
+  /* -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out; */
 }
-
+.carousel-animation:hover {
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+        transform: scale(1.2);
+    box-shadow: 10px 15px 7px #C7C7C7;
+}
 .position {
   display: block;
   margin-left: auto;
