--- a/client/src/components/shared/Main.css
+++ b/client/src/components/shared/Main.css
@@ -18,14 +18,46 @@ h1 {
 /* --------------- Colors ---------------- */
 /* #FFFFFF #724524 #7344 */
 
-/* --------------- NAV ---------------- */
-
-.main-nav {
-  width: 100%;
-  background-color: #7344;
+/* --------------- CONTACT ---------------- */
+.contact {
+  display:-webkit-flex;
+  display: flex;
+  flex-direction: row;
+  
+  justify-content: flex-start;
+  align-items: flex-start;
+  height: 100vh;
 }
 
+.contact_left {
+  flex-direction: column;
+  width: 50%;
+  margin: 30vh 5em 0em 18em;
+}
 
+.contact_right {
+  flex-direction: column;
+  background-color: #f9f9f9;
+  width: 30vw;
+  height: 50vh;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.contact p {
+  font-size: 1.4em;
+}
+
+.contact_logo {
+  margin-bottom: 3vh;
+  width: 32em;
+}
+.address_info {
+  font-weight: bold;
+}
+
+.address_info p {
+  margin: 0.5em;
+}
 
 
 
@@ -38,11 +70,9 @@ h1 {
   width: 100vw;
   height: 4.5em;
   background-color: white;
-  -moz-box-shadow: 0 0 3px #ccc;
-  -webkit-box-shadow: 0 0 3px #ccc;
-  box-shadow: 0 0 3px #ccc;
   font-size: 1.1em;
   align-items: center;
+  margin-left: 2em;
 } 
 
 .nav-home {
@@ -63,6 +93,7 @@ h1 {
   padding: 2em 1.2em;
   color: black;
   position: relative;
+  display: inline-block;
 }
 
 .nav-item:hover {
@@ -96,4 +127,35 @@ h1 {
   width: 2em;
   margin: 2em 0em 0em 0em;
 }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 5000;
+  font-size: 0.9em;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  color: teal;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
 
