finished about us page

--- a/client/src/components/about/AboutUs.css
+++ b/client/src/components/about/AboutUs.css
@@ -6,8 +6,9 @@
 
   padding: 5px;
   margin-top: 50px;
-  margin-left: 150px;
-  margin-right: 150px;
+  margin-left: 190px;
+  margin-right: 190px;
+  line-height: 2.5;
 
 }
 
