--- a/client/src/components/shared/Orphanages.css
+++ b/client/src/components/shared/Orphanages.css
@@ -29,7 +29,7 @@
   display: flex;
 }
 
-.mid-container {
+.mid-container1 {
   display: flex;
   justify-content: space-around;
   border: purple 2px solid;
