changed a few lines

--- a/client/src/components/shared/Orphanages.css
+++ b/client/src/components/shared/Orphanages.css
@@ -1,6 +1,6 @@
 .orph-background {
  display: flex;
- border: red solid 2px;
+ /* border: red solid 2px; */
  height: 50vh;
  width: 100%;
  padding: 2em;
@@ -8,7 +8,7 @@
 
 .orph-title {
   font-size: 50px;
-  border: orange solid 2px;
+  /* border: orange solid 2px; */
   height: 20vh;
   align-content: baseline;
 }
@@ -19,7 +19,7 @@
   width: 100%;
   flex-direction: column;
   padding: 5em;
-  border: pink solid 2px;
+  /* border: pink solid 2px; */
 }
 .mid-title {
   display: flex;
@@ -32,7 +32,7 @@
 .mid-container1 {
   display: flex;
   justify-content: space-around;
-  border: purple 2px solid;
+  /* border: purple 2px solid; */
   padding: 5em;
 }
 .mid-box1 {
@@ -40,24 +40,24 @@
   /* justify-content: space-around; */
   font-size: 30px;
   flex-direction: column;
-  border: blue 2px solid;
+  /* border: blue 2px solid; */
   width: 50%
 }
 .mid-para1 {
   /* justify-content: space-around; */
   display: flex;
   font-size: 13px;
-  border: burlywood 2px solid;
+  /* border: burlywood 2px solid; */
 }
 .mid-picbox1 {
   display: flex;
   width: 50%;
-  border: teal solid 2px;
+  /* border: teal solid 2px; */
 }
 .mid-container2 {
   display: flex;
   justify-content: space-around;
-  border: purple 2px solid;
+  /* border: purple 2px solid; */
   padding: 5em;
 }
 .mid-box2 {
@@ -65,20 +65,19 @@
   /* justify-content: space-around; */
   font-size: 30px;
   flex-direction: column;
-  border: blue 2px solid;
+  /* border: blue 2px solid; */
   width: 50%
 }
 .mid-para2 {
   /* justify-content: space-around; */
   display: flex;
   font-size: 13px;
-  border: burlywood 2px solid;
+  /* border: burlywood 2px solid; */
 }
 .mid-picbox2 {
   display: flex;
   width: 50%;
-  border: teal solid 2px;
+  /* border: teal solid 2px; */
 }
-
 
 
