--- a/client/src/components/shared/Main.css
+++ b/client/src/components/shared/Main.css
@@ -23,18 +23,24 @@ h1 {
   display:-webkit-flex;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
   align-items: center;
-  margin: 100px 200px 150px 200px;
+  justify-content: flex-start;
+  /* padding: 100px 200px 150px 200px; */
+
 }
 
 .contact_left {
-  width: 50%;
+  display: flex;
+  flex-direction: column;
+  width: 38%;
   /* margin: 30vh 5em 0em 18em; */
   flex: 1;
+  padding-right: 2%;
+  padding-left: 10%;
 }
 
 .contact_submit {
+  font-size: .9vw;
   background-color: teal;
 }
 
@@ -43,27 +49,31 @@ h1 {
 }
 
 .contact_right:hover {
-  padding: 5em;
   box-shadow: 0px 8px 16px 0px rgba(155, 149, 149, 0.2);
 }
 
 .contact_right {
+  display: flex;
+  flex-direction: column;
   background-color: white;
   flex: 1;
-  justify-content: flex-start;
-  padding: 5em;
+  padding: 4vh;
+  width: 50%;
+  margin: 5% 5% 5% 0%;
 }
+
 
 .contact_item {
   padding-bottom: 2em;
-  font-size: 14px;
+  /* font-size: 14px; */
+  font-size: .8vw;
 }
 
 .contact_item textarea, .contact_item input {
   outline: none;
   border: none;
   border-bottom: solid 1px #ccc;
-  padding: 20px;
+  padding: 1.5vw;
   width: 100%;
 }
 
@@ -76,21 +86,25 @@ h1 {
 }
 
 .contact_item textarea {
-  height: 150px;
+  height: 10em;
 }
 
 .contact h2 {
-  margin-bottom: 50px;
+  margin-bottom: 3vw;
+  font-size: 1.3vw;
 }
 
 .contact p {
-  font-size: 1.4em;
+  font-size: 1.1vw;
 }
 
 .contact_logo {
+  width: 100%;
+  max-width: 30em;
   margin-bottom: 3vh;
-  width: 32em;
+  height: auto;
 }
+
 .address_info {
   font-weight: bold;
 }
@@ -110,7 +124,7 @@ h1 {
   width: 100vw;
   height: 4.5em;
   background-color: white;
-  font-size: 1.1em;
+  font-size: .9vw;
   align-items: center;
   margin-left: 2em;
 } 
@@ -127,13 +141,15 @@ h1 {
   flex-direction: row;
   justify-content: space-evenly;
   width: 50%;
+  margin-right: 3%;
 }
 
 .nav-item {
   padding: 2em 1.2em;
   color: black;
-  position: relative;
+  position: relative; 
   display: inline-block;
+
 }
 
 .nav-item:hover {
@@ -145,8 +161,7 @@ h1 {
   bottom: 20px;
   content: "";
   display: block;
-  height: 3px;
-  left: 50%;
+  height: .18vh;
   position: absolute;
   background: teal;
   transition: width 0.3s ease 0s, left 0.3s ease 0s;
@@ -166,6 +181,7 @@ h1 {
 .facebook-image {
   width: 2em;
   margin: 2em 0em 0em 0em;
+
 }
 
 .dropdown {
@@ -180,7 +196,7 @@ h1 {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 5000;
-  font-size: 0.9em;
+  font-size: 0.8vw;
 }
 
 .dropdown-content a {
