--- a/client/src/components/orphanages/Orphanages.css
+++ b/client/src/components/orphanages/Orphanages.css
@@ -1,16 +1,21 @@
 .orph-background {
  display: flex;
+ justify-content: center;
+ flex-direction: column;
  /* border: red solid 2px; */
  height: 50vh;
  width: 100%;
- padding: 2em;
+ padding-top: 2em;
+ padding-left: 11em;
+ padding-bottom: 10em;
 }
-
 .orph-title {
-  font-size: 50px;
+  font-size: 60px;
   /* border: orange solid 2px; */
-  height: 20vh;
-  align-content: baseline;
+  height: 7vh;
+}
+.orph-word {
+  font-size: 60px;
 }
 
 .mid-col {
@@ -18,12 +23,13 @@
   height: 25vh;
   width: 100%;
   flex-direction: column;
-  padding: 5em;
-  /* border: pink solid 2px; */
+  padding: 5em 10em 0em;
+  border: pink solid 2px;
 }
 .mid-title {
   display: flex;
   font-size: 30px;
+  border: solid red 2px;
 }
 .mid-p {
   display: flex;
@@ -32,8 +38,8 @@
 .mid-container1 {
   display: flex;
   justify-content: space-around;
-  /* border: purple 2px solid; */
-  padding: 5em;
+  border: purple 2px solid;
+  padding: 5em 10em 0em;
 }
 .mid-box1 {
   display: flex;
@@ -57,8 +63,8 @@
 .mid-container2 {
   display: flex;
   justify-content: space-around;
-  /* border: purple 2px solid; */
-  padding: 5em;
+  border: purple 2px solid;
+  padding: 5em 10em 0em;
 }
 .mid-box2 {
   display: flex;
@@ -79,5 +85,6 @@
   width: 50%;
   /* border: teal solid 2px; */
 }
+
 
 
