crud finished for homes

--- a/client/src/components/shared/Proven-souls.css
+++ b/client/src/components/shared/Proven-souls.css
@@ -19,8 +19,9 @@
 .ps-title {
   font-family: 'Oxygen', sans-serif;
   font-weight: bold;
-  font-size: 4.5em;
+  font-size: 3.5em;
   margin-bottom: 1em;
+  /* flex-shrink: -1; */
 }
 .ps-para {
   
