--- a/client/src/components/shared/ThreeStages.css
+++ b/client/src/components/shared/ThreeStages.css
@@ -190,7 +190,7 @@
   /* padding: 0.5em 1em; */
   width: 20rem;
   transition: 0.5s all ease-out;
-  padding: 1em 2em;
+  padding: .65em 1.30em;
   margin-left: 0 auto;
   margin-bottom: 1em;
 }
