--- a/client/src/components/staff/Staff.css
+++ b/client/src/components/staff/Staff.css
@@ -3,7 +3,7 @@
 display: flex;
 flex-direction: row;
 justify-content: space-evenly;
-border: 2px solid red;
+/* border: 2px solid red; */
 width: 100%;
 height: 15em;
 /* text-align: center */
