--- a/client/src/components/homes/centers/ShowCenters.css
+++ b/client/src/components/homes/centers/ShowCenters.css
@@ -5,22 +5,28 @@
   height: 60vh;
   width: 100%;
   /* margin-top: 5em; */
-  border: green 2px solid;
+  /* border: green 2px solid; */
   z-index: -1000;
 }
 
+.centers-img {
+  background-image: url('../../../assets/expeditionAssets/exp-girls.jpg');
+  background-position: center;
+  background-size: cover;
+  opacity: 0.7;
+  filter: brightness(50%);
+  width: 50%;
+
+
+}
 .centers-dir {
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding-left: 4em;
-  width: 50%;
-  background-image: url('../../../assets/expeditionAssets/exp-girls.jpg');
-  background-position: center;
-  background-size: cover;
-  opacity: 0.7;
   color: white;
-  border: red 2px solid;
+  height: 100%;
+  /* border: red 2px solid; */
 }
 
 .dir-title {
@@ -45,12 +51,12 @@
   margin-left: 2em;
 }
 
-.centers-img {
+.centers-map {
   width: 50%;
   background-image: url('../../../assets/Images/mapPic.jpg');
   background-position: center;
   background-size: cover;
-  border: blue 2px solid
+  /* border: blue 2px solid */
 }
 
 .centers-stats-cont {
@@ -59,14 +65,14 @@
   padding: 0em 4.5em;
   height: 15em;
   width: 100%;
-  border: purple 2px solid;
+  /* border: purple 2px solid; */
   background-color: #67385D;
 }
 
 .centers-single-stat {
   display: flex;
   justify-content: center;
-  border: blue 2px solid;
+  /* border: blue 2px solid; */
   color: white;
   font-size: 2em !important;
   width: 25%;
@@ -81,4 +87,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.homes-stat-font {
+  font-size: 2em;
+  color: color !important;
+  padding-bottom: .5em;
+}
+.homes-stat-title {
+  font-size: .75em;
+  color: color
 }
