--- a/client/src/components/staff/Staff.css
+++ b/client/src/components/staff/Staff.css
@@ -8,7 +8,7 @@ width: 100%;
 height: 100%;
 /* text-align: center */
 flex-wrap: wrap;
-padding: 0em 2em 2em;
+/* padding: 0em 2em 2em; */
 /* border: 5px solid red; */
 
 
@@ -22,7 +22,7 @@ padding: 0em 2em 2em;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  margin: 2em 1em;
+  margin: 1em 1em;
   
   
 
@@ -30,7 +30,7 @@ padding: 0em 2em 2em;
   /* background-color: black; */
   background-image: url('../../assets/Icons/profile.png');
   background-position: top;
-  background-size: 55%;
+  background-size: 65%;
   background-repeat: no-repeat;
   /* border: 5px solid blue; */
   
