--- a/client/src/components/admin/employees/Employees.css
+++ b/client/src/components/admin/employees/Employees.css
@@ -3,8 +3,8 @@
   flex-direction: row;
   justify-content: space-evenly;
   /* border: 2px solid red; */
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   /* text-align: center */
   flex-wrap: wrap;
   /* padding: 0em 2em 2em; */
@@ -16,15 +16,18 @@
 
   .employee-box{
     /* border: 2px solid black; */
-    width: 20em;
-    height: 16em;
+    width: 33%;
+    /* height: 16em; */
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 1em 1em;
-  
+    /* margin: 1em 1em; */
+    padding: 10px;
+  }
 
-  
+  .employee_photo {
+    width: 150px;
+    padding: 10px;
   }
 
   .employee-box h3 {
@@ -35,6 +38,7 @@
     text-align: center;
     background-color: #3C7473;
     color: white;
+    padding: 10px;
   }
 
   .add-button{
