--- a/client/src/components/staff/Staff.css
+++ b/client/src/components/staff/Staff.css
@@ -10,9 +10,6 @@ height: 100%;
 flex-wrap: wrap;
 /* padding: 0em 2em 2em; */
 /* border: 5px solid red; */
-
-
-
 }
 
 .staff-box{
@@ -23,9 +20,11 @@ flex-wrap: wrap;
   flex-direction: column;
   justify-content: flex-end;
   margin: 1em 1em;
-  
+  position: relative;
+  overflow: hidden;
   
 
+  
   /* --------------- BACKGROUND ---------------- */
   /* background-color: black; */
   background-image: url('../../assets/Icons/profile.png');
@@ -33,10 +32,21 @@ flex-wrap: wrap;
   background-size: 65%;
   background-repeat: no-repeat;
   /* border: 5px solid blue; */
-  
-
-  
 }
+
+.staff-box:hover {
+  cursor: pointer;
+  opacity: .8;
+  transform: scale(1.1);
+  transition: transform 3s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+
+}
+
+.img-wrapper {
+  display: inline-block; /* change the default display type to inline-block */
+    overflow: hidden;
+}
+
 
 .staff-box h1 h3 {
   font-size: 10px;
