--- a/client/src/components/admin/employees/Employees.css
+++ b/client/src/components/admin/employees/Employees.css
@@ -37,11 +37,16 @@
     color: white;
   }
 
+  .emp-btn-flex {
+    display: flex;
+    justify-content: center;
+  }
+
   .add-button{
     margin: 3em;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 9%;
+    /* margin-left: auto;
+    margin-right: auto; */
+    /* width: 15%; */
     
   }
