--- a/client/src/components/homes/centers/ShowCenters.css
+++ b/client/src/components/homes/centers/ShowCenters.css
@@ -13,8 +13,8 @@
   background-image: url('../../../assets/expeditionAssets/exp-girls.jpg');
   background-position: center;
   background-size: cover;
-  opacity: 0.7;
-  filter: brightness(50%);
+  /* opacity: 0.7; */
+  /* filter: brightness(50%); */
   width: 50%;
 
 
@@ -114,7 +114,7 @@
   width: 50%
 }
 
-.cntr-col-home {
+.cntr-col {
   display: flex;
   flex-direction: column;
   justify-content: center;
