--- a/client/src/components/homes/centers/ShowCenters.css
+++ b/client/src/components/homes/centers/ShowCenters.css
@@ -106,17 +106,34 @@
   flex-direction: row;
   height: 100vh;
   width: 100%;
-  border: red solid 2px;
+  /* border: red solid 2px; */
 }
 
 .cntr-content-home div {
-  border: blue solid 2px;
-  width: 50%
+  /* border: blue solid 2px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 80%;
+  padding: 0em 3em;
+  
+
+  /* width: 50% */
 }
 
 .cntr-col {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border: green solid 2px;
+  /* border: green solid 2px; */
+  width: 50%;
+  /* height: 80%; */
+}
+
+.cntr-col h1 {
+  font-size: 2.5em;
+}
+.cntr-col p {
+  font-size: 1em;
+  line-height: 1.85em;
 }
