--- a/client/src/components/homes/centers/ShowCenters.css
+++ b/client/src/components/homes/centers/ShowCenters.css
@@ -2,7 +2,7 @@
 
 .centers-top-cont {
   display: flex;
-  height: 70vh;
+  height: 75vh;
   width: 100%;
   /* margin-top: 5em; */
   /* border: green 2px solid; */
@@ -59,6 +59,8 @@
   /* border: blue 2px solid */
 }
 
+/* ------------ Stats Container --------------- */
+
 .centers-stats-cont {
   display: flex;
   justify-content: space-between;
@@ -95,8 +97,9 @@
   padding-bottom: .5em;
 }
 .homes-stat-title {
-  font-size: .75em;
-  color: color
+  font-size: .7em;
+  color: color;
+  font-weight: lighter;
 }
 
 /* ----------------- Content Portion ----------------- */
@@ -134,6 +137,6 @@
   font-size: 2.5em;
 }
 .cntr-col p {
-  font-size: 1em;
-  line-height: 1.85em;
+  font-size: 1.05em;
+  line-height: 1.70em;
 }
