--- a/client/src/components/staff/Staff.css
+++ b/client/src/components/staff/Staff.css
@@ -37,8 +37,8 @@ flex-wrap: wrap;
 .staff-box:hover {
   cursor: pointer;
   opacity: .8;
-  transform: scale(1.1);
-  transition: transform 3s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+  transform: scale(1.02);
+  /* transition: transform 3s cubic-bezier(0.25, 0.45, 0.45, 0.95); */
 
 }
 
