--- a/client/src/components/orphanages/Orphanages.css
+++ b/client/src/components/orphanages/Orphanages.css
@@ -1,6 +1,5 @@
 .orph-background {
  display: flex;
- 
  justify-content: center;
  flex-direction: column;
  height: 65vh;
@@ -30,7 +29,8 @@
   padding-bottom: 1em;
 }
 .mid-p {
-  font-size: 16px;
+  font-size: 14px;
+  line-height: 1.7;
   padding-top: .10em;
 }
 
@@ -49,7 +49,8 @@
 .mid-para1 {
   display: flex;
   padding-top: 2em;
-  font-size: 16px;
+  font-size: 14px;
+  line-height: 1.7;
 }
 .mid-picbox1 {
   display: flex;
@@ -76,7 +77,8 @@
 .mid-para2 {
   display: flex;
   padding-top: 2em;
-  font-size: 16px;
+  font-size: 14px;
+  line-height: 1.7;
 }
 .mid-picbox2 {
   display: flex;
