--- a/client/src/components/admin/homes/Homes.css
+++ b/client/src/components/admin/homes/Homes.css
@@ -4,10 +4,10 @@
 
 .home-section-cont {
   display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
   flex-wrap: wrap;
-  margin: 2em 5em 0em 5em;
-  
-
+  margin: 2em 0em 5em 8em;
 }
 
 .form-homes {
@@ -31,7 +31,43 @@
   display: flex;
   flex-direction: column;
   /* justify-content: center; */
-  /* width: 50%; */
+  width: 50%;
   
   border: blue solid 2px;
+}
+
+.homes-title {
+  text-align: center;
+  background-color: #3C7473;
+  color: white;
+  padding: 10px;
+}
+
+.add-button {
+  margin: 3em;
+  display: block;
+  /* margin-left: auto;
+  margin-right: auto; */
+  /* width: 15%; */
+  
+}
+
+.home-btn-flex {
+  display: flex;
+  justify-content: center;
+}
+
+.home-box h3 {
+  font-size: 16px;
+}
+
+.home-box {
+  /* border: 2px solid black; */
+  width: 33%;
+  /* height: 16em; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  
+  padding: 20px;
 }
