--- a/client/src/components/homes/centers/ShowCenters.css
+++ b/client/src/components/homes/centers/ShowCenters.css
@@ -94,7 +94,7 @@
 .homes-stat-font {
   font-size: 2em;
   color: color !important;
-  padding-bottom: .5em;
+  /* padding-bottom: .5em; */
 }
 .homes-stat-title {
   font-size: .7em;
