--- a/client/src/components/shared/AboutLanding.css
+++ b/client/src/components/shared/AboutLanding.css
@@ -20,7 +20,7 @@
 .about-title {
   font-size: 40px;
   padding-top: 2.5em;
-  padding-bottom: 2em;
+  padding-bottom: 1em;
   padding-left: .8em;
 }
 
@@ -34,13 +34,14 @@
 .mission-line {
   color: #3C7473;
   font-size: 45px;
-  font-weight: 500;
+  font-weight: 400;
   padding-left: .8em;
-  padding-bottom: .3em;
+  line-height: 0;
+  padding-bottom: .9em;
 }
 
 .mission-paragraph {
-  padding: 1.5em;
+  padding-top: .3em;
   font-size: 14px;
   line-height: 2;
   padding-left: 2.6em;
@@ -61,15 +62,17 @@
   color: #3C7473;
   font-size: 20px;
   font-weight: 500;
-  padding-top: 4em;
+  padding-top: 3.5em;
   padding-left: 0;
 }
 
 .converted-line {
   color: #3C7473;
   font-size: 45px;
-  font-weight: 500;
-  padding-bottom: .8em;
+  font-weight: 400;
+  line-height: 0;
+  padding-left: .9;
+  padding-bottom: .9em;
 }
 
 .converted-paragraph {
