--- a/client/src/components/shared/Main.css
+++ b/client/src/components/shared/Main.css
@@ -153,10 +153,12 @@ h1 {
   color: black;
   position: relative; 
   display: inline-block;
+  text-decoration: none;
 }
 
 .nav-item:hover {
   color:black;
+  text-decoration: none;
 }
 
 .nav-item:after {    
@@ -164,7 +166,7 @@ h1 {
   bottom: 20px;
   content: "";
   display: block;
-  height: .18vh;
+  height: .2vh;
   position: absolute;
   background: teal;
   transition: width 0.3s ease 0s, left 0.3s ease 0s;
@@ -211,6 +213,7 @@ h1 {
 
 .dropdown-content a:hover {
   color: teal;
+  text-decoration: none;
 }
 
 .dropdown:hover .dropdown-content {
