--- a/client/src/components/admin/employees/Employees.css
+++ b/client/src/components/admin/employees/Employees.css
@@ -47,3 +47,11 @@
     /* width: 15%; */
     
   }
+
+  .add-button:hover {
+    text-decoration: none;
+  }
+
+  .employee-edit-page button {
+    margin: 0em 1em 0em 0em;
+  }
