--- a/client/src/components/admin/employees/Employees.css
+++ b/client/src/components/admin/employees/Employees.css
@@ -40,7 +40,6 @@
 
 
   .add-button {
-    margin: 3em;
     display: block;
     /* margin-left: auto;
     margin-right: auto; */
@@ -54,4 +53,12 @@
 
   .employee-edit-page button {
     margin: 0em 1em 0em 0em;
+  }
+
+  .employee-buttons {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
+
   }
