changed carousel to about landing

--- a/client/src/components/shared/AboutLanding.css
+++ b/client/src/components/shared/AboutLanding.css
@@ -88,7 +88,7 @@
  padding-left: 4em;
 }
 
-.carousel-animation:hover {
+.carousel-animation {
   padding: 1em;
   border: 2px solid #ddd;
     -webkit-transform: scale(1.04);
