--- a/client/src/components/shared/Footer.css
+++ b/client/src/components/shared/Footer.css
@@ -2,9 +2,9 @@
 
 .footer-container{
   margin: 0 auto;
-  margin-bottom: 1.5em;
-  margin-left: 7em;
-  margin-right: 7em;
+  width: 100vw;
+  padding: 4em;
+  box-shadow: 0px 0px 20px 0px rgba(214, 213, 213, 0.3);
 }
 
 
