--- a/client/src/components/shared/Carousel.css
+++ b/client/src/components/shared/Carousel.css
@@ -12,7 +12,7 @@
   background-size: cover;
   width: 100vw;
   height: 50vw;
-  padding: 0em 1em;
+  /* padding: 0em 1em; */
 }
 .hero-pic2 {
   background-image: url('../../assets/carousel-pic.jpg');
@@ -20,7 +20,7 @@
   background-size: cover;
   width: 100vw;
   height: 50vw;
-  padding: 0em 1em;
+  /* padding: 0em 1em; */
 }
 .hero-pic3 {
   background-image: url('../../assets/carousel-pic3.jpg');
@@ -28,7 +28,7 @@
   background-size: cover;
   width: 100vw;
   height: 50vw;
-  padding: 0em 1em;
+  /* padding: 0em 1em; */
 }
 .hero-pic4 {
   background-image: url('../../assets/carousel-pic4.jpg');
@@ -36,7 +36,7 @@
   background-size: cover;
   width: 100vw;
   height: 50vw;
-  padding: 0em 1em;
+  /* padding: 0em 1em; */
 }
 
 .hero-align_col {
@@ -51,15 +51,18 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  /* width: 100%; */
+  width: 100vw;
   height: 100%;
   text-align: center;
   color: white;
-  /* background-color: rgba(0, 0, 0, .3); */
-
+  background-color: rgba(0, 0, 0, .3);
 
 }
 
 .col-two {
   flex: 50%;
+}
+
+.carousel-txt {
+  text-shadow: 1px 1px black;
 }
