added flex to discover btn on landing page

--- a/client/src/components/DropInCenter/DropInCenter.css
+++ b/client/src/components/DropInCenter/DropInCenter.css
@@ -31,6 +31,7 @@ column-count: 2;
  .drop-title {
   font-size: 60px;
   height: 7vh;
+  text-shadow: 1px 1px black;
 }
 .drop-word {
   font-size: 60px;
