--- a/client/src/components/admin/employees/Employees.css
+++ b/client/src/components/admin/employees/Employees.css
@@ -39,16 +39,23 @@
   }
 
 
-  .add-button {
+  button.back-button {
+    background-color: #D2AA31;
     display: block;
-    /* margin-left: auto;
-    margin-right: auto; */
-    /* width: 15%; */
-    
+  }
+  
+  button.back-button:hover {
+    background-color: rgb(192, 153, 37);
   }
 
-  .add-button:hover {
-    text-decoration: none;
+  
+  button.add-button {
+    background-color: #3C7473;
+    display: block;
+  }
+  
+  button.add-button:hover {
+    background-color: rgb(40, 78, 78);
   }
 
   .employee-edit-page button {
