--- a/client/src/components/shared/ThreeStages.css
+++ b/client/src/components/shared/ThreeStages.css
@@ -191,14 +191,14 @@
   font-size: 1.75em;
   border: 2px solid white;
   /* border: 2px solid white; */
-  margin: 0 auto;
-  margin-top: 1em;
+  /* margin: 0 auto; */
+  margin: 1em 0em;
   /* padding: 0.5em 1em; */
   width: 20rem;
   transition: 0.5s all ease-out;
   padding: .65em 1.30em;
-  margin-left: 0 auto;
-  margin-bottom: 1em;
+  /* margin-left: 0 auto; */
+
 }
 
 .ts-btn-row {
