added proven souls page

--- a/client/src/components/shared/Main.css
+++ b/client/src/components/shared/Main.css
@@ -225,4 +225,13 @@ h1 {
   padding-left: 2em;
 }
 
+li {
+  cursor: pointer;
+  }
+
+  .souls-container {
+    height: 100vh;
+    padding-bottom: 50em;
+  }
+
 
